Continued and cleaned ex02

--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**i - Categorical data :**\n",
+    "**i - Interval data :**\n",
     "\n",
     "Once again, we start our analysis by visualizing the data to see if we can recognize special distributions. However, we notice simply by looking at the \"head\" of our table that some data is categorical and some data constitutes intervals. In the beginning, we will focus on the latter.\n",
     "\n",
@@ -269,14 +269,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### a. Salaries:\n",
+    "\n",
     "The main thing we need to look at is the salaries. To have a better visualization, we need to plot them using a log-log plot."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Regarding categorical data, we should look at rates (makes much more sense than looking at just the numbers). Thus we define the rates for race, degree and marriage depending on each treat to be able to compare them (pie charts ? we need smthng visual)."
    ]
   },
   {
@@ -287,15 +282,279 @@
    },
    "outputs": [],
    "source": [
-    "#Implement pie chart mentioned above"
+    "#As this does not work yet, we \"comment\" it\n",
+    "\"\"\"\"salaries = ['re74', 're75', 're78']\n",
+    "\n",
+    "from scipy.stats import itemfreq\n",
+    "\n",
+    "for col in salaries:\n",
+    "    print('Visualization of :', col)\n",
+    "    plt.title(\"Loglog of \" + col)\n",
+    "    plt.loglog(lalonde_df[untreated][col])\n",
+    "    plt.loglog(lalonde_df[treated][col])\n",
+    "    plt.show()\"\"\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also decide to look at the correlation between the variables (is this the best method to do it ? Not better doing it for each treat alone ?). \n",
-    "--> Interesting, but explain why ? And most importantly, explain what we see (degrees are not - linearly - linked to race, all salaries are linked, other obvious stuff like link between educ & degree or age & marriage)"
+    "##### b. Evolution:\n",
+    "\n",
+    "Even though it is useful to plot the salaries to see the difference between the years, it is much more useful to understand how the salary of each participant has changed over the years. To do so, we will visualize our data using a parallel plot. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Implement parallel plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Conclusion:**\n",
+    "\n",
+    "By looking at the interval data, and more specificaly at the salaries of participants, we can say that …"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ii - Categorical data :**\n",
+    "\n",
+    "Regarding categorical data, we should look at rates (makes much more sense than looking at just the numbers). Thus we define the rates for race, degree and mariage depending on each treatment to be able to compare them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tot_u, tot_t = lalonde_df.groupby('treat')['id'].count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### a. Race ratios:\n",
+    "\n",
+    "We will start with race. As we do not have numbers for \"White\" participants, we get the number of \"Blacks\" and \"Hispanics\" for each treatment group and substract the total. We then compare the rates of each race using pie charts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "blacks_u, blacks_t = lalonde_df[lalonde_df.black == 1].groupby('treat')['id'].count()\n",
+    "hispan_u, hispan_t = lalonde_df[lalonde_df.hispan == 1].groupby('treat')['id'].count()\n",
+    "whites_u, whites_t = (tot_u - blacks_u - hispan_u, tot_t - blacks_t - hispan_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "u_race_rates = ([blacks_u, hispan_u, whites_u]/tot_u)*100\n",
+    "t_race_rates = ([blacks_t, hispan_t, whites_t]/tot_t)*100\n",
+    "race_labels = 'Blacks', 'Hispanics', 'Whites'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.pie(u_race_rates, labels = race_labels, autopct='%1.1f%%', shadow=True, startangle=90)\n",
+    "ax.axis('equal')\n",
+    "plt.title(\"Rates of races in the untreated group\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.pie(t_race_rates, labels = race_labels, autopct='%1.1f%%', shadow=True, startangle=90)\n",
+    "ax.axis('equal')\n",
+    "plt.title(\"Rates of races in the treated group\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### b. Degree ratios:\n",
+    "\n",
+    "To have a better understanding of the difference of salaries, we also need to look at the level of education of the participants of each treatment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "degree_u, degree_t = lalonde_df[lalonde_df.nodegree == 0].groupby('treat')['id'].count()\n",
+    "no_degree_u, no_degree_t = (tot_u - degree_u, tot_t - degree_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "u_degree_rates = ([degree_u, no_degree_u]/tot_u)*100\n",
+    "t_degree_rates = ([degree_t, no_degree_t]/tot_t)*100\n",
+    "degree_labels = 'Degree', 'No degree'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.pie(u_degree_rates, labels = degree_labels, autopct='%1.1f%%', shadow=True, startangle=90)\n",
+    "ax.axis('equal')\n",
+    "plt.title(\"Rate of people with degrees in the untreated group\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.pie(t_degree_rates, labels = degree_labels, autopct='%1.1f%%', shadow=True, startangle=90)\n",
+    "ax.axis('equal')\n",
+    "plt.title(\"Rate of people with degrees in the treated group\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### c. Mariage ratios:\n",
+    "\n",
+    "Finally, we look at the rates of married people among both groups as it is our last feature. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "married_u, married_t = lalonde_df[lalonde_df.married == 1].groupby('treat')['id'].count()\n",
+    "not_married_u, not_married_t = (tot_u - married_u, tot_t - married_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "u_married_rates = ([married_u, not_married_u]/tot_u)*100\n",
+    "t_married_rates = ([married_t, not_married_t]/tot_t)*100\n",
+    "mariage_labels = 'Married', 'Not married'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.pie(u_married_rates, labels = mariage_labels, autopct='%1.1f%%', shadow=True, startangle=90)\n",
+    "ax.axis('equal')\n",
+    "plt.title(\"Rate of people with degrees in the untreated group\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.pie(t_married_rates, labels = mariage_labels, autopct='%1.1f%%', shadow=True, startangle=90)\n",
+    "ax.axis('equal')\n",
+    "plt.title(\"Rate of people with degrees in the treated group\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Conclusion:**\n",
+    "\n",
+    "By looking at the categorical data, we can say that …"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**iii - Correlated data :**\n",
+    "\n",
+    "After working on each value alone, we want to understand how each value is (linearly) linked to others by computing the Pearson correlation on each pair of features and displaying it on a heat map."
    ]
   },
   {
