Implemented Spark function

--- a/project/Basic exploration.ipynb
+++ b/project/Basic exploration.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -637,6 +637,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|                 _c0|\n",
+      "+--------------------+\n",
+      "|77652298383795404...|\n",
+      "|77652300063620301...|\n",
+      "|77652304520069120...|\n",
+      "|77652305840429056...|\n",
+      "|77652305850492518...|\n",
+      "|77652307102501273...|\n",
+      "|77652309276821913...|\n",
+      "|77652310500717772...|\n",
+      "|77652312672947404...|\n",
+      "|77652313440924467...|\n",
+      "|77652315035189248...|\n",
+      "|77652315612322611...|\n",
+      "|77652316603432550...|\n",
+      "|77652316736389939...|\n",
+      "|77652318896037068...|\n",
+      "|77652320516298342...|\n",
+      "|77652324701800857...|\n",
+      "|77652325676129075...|\n",
+      "|77652326936107417...|\n",
+      "|77652327111839744...|\n",
+      "+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark import SparkContext\n",
+    "from pyspark.sql import SQLContext\n",
+    "sc = SparkContext('local', 'pyspark')\n",
+    "sqlContext = SQLContext(sc)\n",
+    "df = sqlContext.read.format('com.databricks.spark.csv').options(header='false').load('twitter-swisscom/sample.tsv')\n",
+    "df.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -649,6 +698,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
