adding some content fore exo 4, critiquing some work

--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -38,15 +38,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We preform a naive data analysis using plots."
+    "We preform a naive data analysis using plots and numbers."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#import the data set\n",
@@ -72,14 +70,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "#masks to be used later\n",
     "treated = lalonde_df.treat == 1\n",
     "untreated = lalonde_df.treat == 0\n",
     "\n",
+    "#apply masks to get treated and untreated\n",
     "treated_salary = lalonde_df[treated]['re78']\n",
     "untreated_salary = lalonde_df[untreated]['re78']"
    ]
@@ -92,14 +90,17 @@
     "\n",
     "We suppose that the first step of the analysis would be to plot the data to be able to have a visual summary of what it says.\n",
     "\n",
-    "_**Note:** we used the [following StackOverflow code](https://stackoverflow.com/questions/8822370/plot-line-graph-from-histogram-data-in-matplotlib) to compute the histograms as a continuous function._"
+    "_**Note:** we used the [following StackOverflow code](https://stackoverflow.com/questions/8822370/plot-line-graph-from-histogram-data-in-matplotlib) to compute the histograms as a continuous function._\n",
+    "\n",
+    "\n",
+    "**leos' comment: I think it might be better to show the discrete histogram, as we don't have that many data points? why use a continuous one, if we want to use it we should justify it better**\n",
+    "**we could also say that this is a log-normal distribution (lot's of 0's and very few high values)**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -143,7 +144,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -160,7 +160,8 @@
     "- The untreated group has more people.\n",
     "- The untreated group's salaries are homogeneous compared to the treated group's salaries (there is a smaller deviation). Moreover, the untreated group's salaries are higher (higher mean).\n",
     "- However, the max salary in the treated group is 3x higher! The 1st quartile is also twice higher on the treated group.\n",
-    "- Finally, we have that the second and third quartiles are higher in the first group."
+    "- Finally, we have that the second and third quartiles are higher in the first group. Quartiles are more resistent to outliers, so we should put more consideration\n",
+    "- The interquartile distance is larger in the untreated set, we should revisit the part about homegenety based on teh standard deviation **leo's comment**"
    ]
   },
   {
@@ -169,7 +170,10 @@
    "source": [
     "###### Second insights:\n",
     "\n",
-    "By looking at these numbers the researcher would assume that the treatment only helps the poorer and richer people while being a burden for the \"middle class\". Moreover, it has a negative impact according to the basic statistics (the group's incomes are lower in average and allocated less efficiently according to the standard deviation)."
+    "By looking at these numbers the researcher would assume that the treatment only helps the poorer and richer people while being a burden for the \"middle class\". \n",
+    "<- why? we can't draw this conclusion like that **leo's comment**\n",
+    "\n",
+    "Moreover, it has a negative impact according to the basic statistics (the group's incomes are lower in average and allocated less efficiently according to the standard deviation)."
    ]
   },
   {
@@ -197,7 +201,7 @@
    "source": [
     "##### Third insights :\n",
     "\n",
-    "By discarding the outliers (points above the first box which do not represent a lot as they only represent the richest people), the researcher is clearly comforted in his past insights, allowing him to formulate a conclusion."
+    "By discarding the outliers, the researcher is clearly comforted in his past insights, allowing him to formulate a conclusion."
    ]
   },
   {
@@ -238,11 +242,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
    "source": [
+    "#defining list of non binary variables\n",
     "intervals = ['age', 'educ', 're74', 're75', 're78']\n",
     "\n",
     "for col in intervals:\n",
@@ -263,7 +267,7 @@
    "metadata": {},
    "source": [
     "From the graphs above, we can see very clearly 2 elements. First, the data distribution is always similar between the 2 groups (even though the number of participants is different due to the difference in the number of people in both groups). On top of this, 3 types of distributions pop out:\n",
-    "- Poisson: this is the distribution representing the **age** of participants\n",
+    "- Poisson: this is the distribution representing the **age** of participants <- rly??? that's not what I'm seeing\n",
     "- Gaussian : this distribution models the **level of education** of participants\n",
     "- Power law : this type of distribution is appropriate to understand the **salaries** of participants (_['re74'], ['re75'] and ['re78']_ all have the same form of distribution)"
    ]
@@ -280,21 +284,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#As this does not work yet, we \"comment\" it\n",
-    "\"\"\"\"salaries = ['re74', 're75', 're78']\n",
+    "\"\"\"salaries = ['re74', 're75', 're78']\n",
     "\n",
     "from scipy.stats import itemfreq\n",
     "\n",
     "for col in salaries:\n",
     "    print('Visualization of :', col)\n",
     "    plt.title(\"Loglog of \" + col)\n",
-    "    plt.loglog(lalonde_df[untreated][col])\n",
-    "    plt.loglog(lalonde_df[treated][col])\n",
+    "    plt.hist(np.log(lalonde_df[untreated][col]))\n",
+    "    plt.plot(np.log(lalonde_df[treated][col]))\n",
     "    plt.show()\"\"\""
    ]
   },
@@ -310,12 +312,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Implement parallel plot"
+    "#Implement parallel plot\n",
+    "from pandas.plotting import parallel_coordinates\n",
+    "parallel_coordinates(lalonde_df[untreated][['id','re74', 're75', 're78']], 'id', color='Blue', alpha=0.5)\n",
+    "parplot = parallel_coordinates(lalonde_df[treated][['id','re74', 're75', 're78']], 'id', color='Orange' , alpha=0.7)\n",
+    "#remove legend for readability\n",
+    "parplot.legend_.remove()\n",
+    "plt.title('Salary over time for each participant')\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylabel('Annualy Salary')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that:\n",
+    "- the treated group started out with a lower salary\n",
+    "- 75 was a bad year for everybody, treated or untreated.\n",
+    "- the outliers are people partialy people who were already well payed in 74, partialy people who 'made it'.\n",
+    "- there is a lot of movement up for the treated group between 75 and 78"
    ]
   },
   {
@@ -339,9 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tot_u, tot_t = lalonde_df.groupby('treat')['id'].count()"
@@ -359,9 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "blacks_u, blacks_t = lalonde_df[lalonde_df.black == 1].groupby('treat')['id'].count()\n",
@@ -372,9 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "u_race_rates = ([blacks_u, hispan_u, whites_u]/tot_u)*100\n",
@@ -385,9 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -401,7 +412,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -425,9 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "degree_u, degree_t = lalonde_df[lalonde_df.nodegree == 0].groupby('treat')['id'].count()\n",
@@ -437,9 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "u_degree_rates = ([degree_u, no_degree_u]/tot_u)*100\n",
@@ -450,9 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -465,9 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -499,9 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "u_married_rates = ([married_u, not_married_u]/tot_u)*100\n",
@@ -512,9 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -528,7 +526,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -561,9 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "f, ax = plt.subplots(figsize=(10, 8))\n",
@@ -585,43 +580,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prop_table = lalonde_df\n",
-    "del prop_table['re78']"
+    "prop_table = lalonde_df.copy() #otherwise we modify lalonde_df when we modyfy prop_table"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "X = prop_table.iloc[:, 1:]\n",
-    "y = prop_table.iloc[:, :1]\n",
-    "y = np.ravel(y)"
+    "del prop_table['re78'], prop_table['re75'] # isn't 75 already treated? or not idk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = prop_table.iloc[:, 2:] #rows age to 're74'\n",
+    "y = prop_table.iloc[:, 1:2] #treated or not\n",
+    "y = np.ravel(y) #flatten array\n",
+    "print('Our Y : ', y[0:5],'\\nOur X', X[0:5])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "logistic = LogisticRegression()\n",
     "logistic.fit(X, y)\n",
-    "logistic.score(X, y)"
+    "print('Accuracy of prediction: ',logistic.score(X, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"prediction : \", logistic.predict(prop_table.iloc[:6, 2:]), ' reality :', y[0:6])\n",
+    "print('prediction in percent : \\n', logistic.predict_proba(prop_table.iloc[:6, 2:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "propensity_scores = pd.DataFrame(logistic.predict_proba(X)) #get propensity scores for everybody\n",
+    "propensity_scores['y'] = y\n",
+    "propensity_scores['id'] = lalonde_df['id']#keepy y values for each"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "propensity_scores.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Is propensity really that simple ? Cf formula in the course (depends on $\\pi_i = p(Z = 1 \\mid x)$)\n",
-    "==> Doesn't work, here we have the probability of success, need to find the exact thing to do (look with Sas & Leo)"
+    "The logistic.predict's first element gives us the probablility of the subject with a given background not being treated, the second element gives the probabability of them being in the treatment group.\n",
+    "\n",
+    "We now use this to find a matching"
    ]
   },
   {
@@ -632,11 +664,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matching the two is an equivalent problem to find a matching in a bipartite graph"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import networkx as nx\n",
+    "from networkx.algorithms import bipartite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B = nx.Graph()\n",
+    "#creat graph with nodes as id\n",
+    "B.add_nodes_from(propensity_scores['id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# add edges from each treated to each untreated subject\n",
+    "# with weight on each node being the difference between the two\n",
+    "\n",
+    "for row_i in propensity_scores[propensity_scores['y'] ==0 ].iterrows():\n",
+    "    for row_j in propensity_scores[propensity_scores['y'] ==1 ].iterrows():\n",
+    "        B.add_edge(row_i[1]['id'],row_j[1]['id'], weight= 1-np.abs(row_i[1][0] - row_j[1][0])) \n",
+    "        #1-x to transform minimisation problem into maximisation problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matching_dict = nx.max_weight_matching(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(np.mean(treated_subjects[0]), '\\n', np.mean(untreated_subjects[0])) #the difference between the two means is quite large :(\n",
+    "#check sum should be minimized\n",
+    "remaning_subjects = lalonde_df[lalonde_df['id'].isin(matching_dict)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "treated_subjects = remaning_subjects[remaning_subjects['treat'] == 1]\n",
+    "untreated_subjects = remaning_subjects[remaning_subjects['treat'] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.boxplot([treated_subjects.re78, untreated_subjects.re78], labels=['treated', 'untreated'])\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -693,9 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# create the TF-IDF vectorizer\n",
@@ -705,9 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import the data we need to use the vectorizer on. Remove as proposed by sci-kit tutorial\n",
