--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#imports (same as tuto ML)\n",
@@ -284,9 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#As this does not work yet, we \"comment\" it\n",
@@ -560,9 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "f, ax = plt.subplots(figsize=(10, 8))\n",
@@ -581,9 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "prop_table = lalonde_df.copy() #otherwise we modify lalonde_df when we modyfy prop_table"
@@ -679,9 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -712,7 +702,7 @@
     "\n",
     "for row_i in propensity_scores[propensity_scores['y'] ==0 ].iterrows():\n",
     "    for row_j in propensity_scores[propensity_scores['y'] ==1 ].iterrows():\n",
-    "        B.add_edge(row_i[1]['id'],row_j[1]['id'], weight= 1-np.abs(row_i[1][0] - row_j[1][0])) \n",
+    "        B.add_edge(row_i[1]['id'],row_j[1]['id'], weight= -np.abs(row_i[1][0] - row_j[1][0]))\n",
     "        #1-x to transform minimisation problem into maximisation problem"
    ]
   },
@@ -733,7 +723,8 @@
    "source": [
     "#print(np.mean(treated_subjects[0]), '\\n', np.mean(untreated_subjects[0])) #the difference between the two means is quite large :(\n",
     "#check sum should be minimized\n",
-    "remaning_subjects = lalonde_df[lalonde_df['id'].isin(matching_dict)]"
+    "remaning_subjects = lalonde_df[lalonde_df['id'].isin(matching_dict)]\n",
+    "len(remaning_subjects)"
    ]
   },
   {
@@ -766,9 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -782,9 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -807,9 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# create the TF-IDF vectorizer\n",
@@ -819,9 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import the data we need to use the vectorizer on. Remove metadata as proposed by sci-kit tutorial\n",
@@ -838,9 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# vectors is a sparse matrix\n",
@@ -858,7 +839,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -925,11 +905,11 @@
    "outputs": [],
    "source": [
     "param_grid = { \n",
-    "    'n_estimators': [100, 1500],\n",
-    "    'max_depth': [20, 35]\n",
+    "    'n_estimators': [1000],\n",
+    "    'max_depth': [250, 500]\n",
     "}\n",
     "\n",
-    "CV_rfc = GridSearchCV(estimator=clf, param_grid=param_grid)"
+    "CV_rfc = GridSearchCV(estimator=clf, param_grid=param_grid, n_jobs=-1)"
    ]
   },
   {
@@ -938,8 +918,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CV_rfc.fit(vect_train, newsgroups_train)\n",
+    "CV_rfc.fit(vect_valid, newsgroups_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(CV_rfc.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = RandomForestClassifier(n_estimators=1000, max_depth=250, random_state=1, n_jobs=-1)\n",
+    "clf.fit(vect_train, newsgroups_train)\n",
+    "pred = clf.predict(vect_valid)\n",
+    "metrics.f1_score(newsgroups_valid, pred, average='macro')"
    ]
   },
   {
@@ -959,9 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -975,9 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -985,7 +981,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -999,7 +995,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
