Adding clean code for 4

--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -15,13 +15,11 @@
     "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
     "from sklearn.preprocessing import OneHotEncoder # is this really needed ?\n",
     "from pandas.plotting import scatter_matrix\n",
-    "from sklearn.model_selection import cross_val_predict\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import cross_val_predict, cross_val_score, train_test_split, GridSearchCV, PredefinedSplit\n",
     "\n",
     "from sklearn.datasets import fetch_20newsgroups\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn import metrics\n",
     "\n",
     "%matplotlib inline"
@@ -704,7 +702,7 @@
     "\n",
     "for row_i in propensity_scores[propensity_scores['y'] ==0 ].iterrows():\n",
     "    for row_j in propensity_scores[propensity_scores['y'] ==1 ].iterrows():\n",
-    "        B.add_edge(row_i[1]['id'],row_j[1]['id'], weight= 1-np.abs(row_i[1][0] - row_j[1][0])) \n",
+    "        B.add_edge(row_i[1]['id'],row_j[1]['id'], weight= -np.abs(row_i[1][0] - row_j[1][0]))\n",
     "        #1-x to transform minimisation problem into maximisation problem"
    ]
   },
@@ -714,7 +712,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matching_dict = nx.max_weight_matching(B)"
+    "matching_dict = nx.max_weight_matching(B, maxcardinality=True)"
    ]
   },
   {
@@ -725,7 +723,8 @@
    "source": [
     "#print(np.mean(treated_subjects[0]), '\\n', np.mean(untreated_subjects[0])) #the difference between the two means is quite large :(\n",
     "#check sum should be minimized\n",
-    "remaning_subjects = lalonde_df[lalonde_df['id'].isin(matching_dict)]"
+    "remaning_subjects = lalonde_df[lalonde_df['id'].isin(matching_dict)]\n",
+    "len(remaning_subjects)"
    ]
   },
   {
@@ -793,14 +792,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Exercise: Load the 20newsgroup dataset. It is, again, a classic dataset that can directly be loaded using sklearn ([link](http://scikit-learn.org/stable/datasets/twenty_newsgroups.html)).  \n",
-    "[TF-IDF](https://en.wikipedia.org/wiki/Tf%E2%80%93idf), short for term frequency inverse document frequency, is of great help when if comes to compute textual features. Indeed, it gives more importance to terms that are more specific to the considered articles (TF) but reduces the importance of terms that are very frequent in the entire corpus (IDF). Compute TF-IDF features for every article using [TfidfVectorizer](http://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html). Then, split your dataset into a training, a testing and a validation set (10% for validation and 10% for testing). Each observation should be paired with its corresponding label (the article category).\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -816,7 +807,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the data we need to use the vectorizer on. Remove as proposed by sci-kit tutorial\n",
+    "# Import the data we need to use the vectorizer on. Remove metadata as proposed by sci-kit tutorial\n",
     "newsgroups_all = fetch_20newsgroups(subset='all', remove=('headers', 'footers', 'quotes'))"
    ]
   },
@@ -824,7 +815,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As asked in the question, beforei seperating in subsets, we will use the vectorizer on the compelte set."
+    "As asked in the question, before seperating in subsets, we will use the vectorizer on the complete set."
    ]
   },
   {
@@ -847,14 +838,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# first we seperate train from the rest. Random_state given to have a seed.\n",
-    "newsgroups_train, newsgroups_inter, vect_train, vect_inter = train_test_split(newsgroups_all.target, vectors, test_size=0.2, random_state=1)\n",
+    "newsgroups_train, newsgroups_inter, vect_train, vect_inter = \\\n",
+    "    train_test_split(newsgroups_all.target, vectors, test_size=0.2, random_state=1)\n",
     "\n",
     "# then we seperate again to get validation and test seperately\n",
-    "newsgroups_test, newsgroups_valid, vect_test, vect_valid = train_test_split(newsgroups_inter, vectors_inter, test_size=0.1, random_state=1)"
+    "newsgroups_test, newsgroups_valid, vect_test, vect_valid = \\\n",
+    "    train_test_split(newsgroups_inter, vect_inter, test_size=0.5, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.\n",
+    "\n",
+    "Train a random forest on your training set. Try to fine-tune the parameters of your predictor on your validation set using a simple grid search on the number of estimator \"n_estimators\" and the max depth of the trees \"max_depth\". Then, display a confusion matrix of your classification pipeline. Lastly, once you assessed your model, inspect the `feature_importances_` attribute of your random forest and discuss the obtained results.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we need to train a random forest on our training set. For this, we will use the RandomForestClassifier, as it contains the parameters talked about in the exercise. But first, we need to ask ourselves what we want to set the parameters (*max_depth* and *n_estimators*) to.\n",
+    "\n",
+    "According to the ADA course, we know that the number of trees will be in the 10's and the depth will be betweem 20 to 30. Thus for the training set, we set *n_estimators* to 10 and *max_depth* to 25.\n",
+    "\n",
+    "For the predictions, we can't use the training set, as we just trained on it and thus would get very good results regardless. So prediction has to be on the validation set."
    ]
   },
   {
@@ -863,22 +878,96 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = MultinomialNB(alpha=.01)\n",
-    "clf.fit(vect_train, newsgroups_train) #why is order her inversed? not that it should matter"
+    "# need to find estimators and depth first. We use random_state to have a seed again.\n",
+    "clf = RandomForestClassifier(n_estimators=100, max_depth=25, random_state=1)\n",
+    "clf.fit(vect_train, newsgroups_train)\n",
+    "pred = clf.predict(vect_valid)\n",
+    "metrics.f1_score(newsgroups_valid, pred, average='macro')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2."
+    "As we can see, predictions aren't that great.\n",
+    "\n",
+    "We try to fine tune on the validation set. Note that to do this, we usethe GridSearch implemented in sklearn. We first chose he estimators between 100 and 1000 and a depth between 20 and 30 as it is what we have seen during the lessons, but seeing as the results for the best parameters were the upper limit (30 and 1000) we decided to look if it would still be the same by taking a larger upper limit (35 and 1500).\n",
+    "\n",
+    "Also, as we have already our own training, validation and test sets, we need to use *PredefinedSplit* in the GridSearch.\n",
+    "\n",
+    "Please note that the fit takes a lot of time to compute, as there are a very large numbers of estimators."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = { \n",
+    "    'n_estimators': [1000],\n",
+    "    'max_depth': [250, 500]\n",
+    "}\n",
+    "\n",
+    "CV_rfc = GridSearchCV(estimator=clf, param_grid=param_grid, n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CV_rfc.fit(vect_valid, newsgroups_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(CV_rfc.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = RandomForestClassifier(n_estimators=1000, max_depth=250, random_state=1, n_jobs=-1)\n",
+    "clf.fit(vect_train, newsgroups_train)\n",
+    "pred = clf.predict(vect_valid)\n",
+    "metrics.f1_score(newsgroups_valid, pred, average='macro')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train a random forest on your training set. Try to fine-tune the parameters of your predictor on your validation set using a simple grid search on the number of estimator \"n_estimators\" and the max depth of the trees \"max_depth\". Then, display a confusion matrix of your classification pipeline. Lastly, once you assessed your model, inspect the `feature_importances_` attribute of your random forest and discuss the obtained results.\n"
+    "As we can see, te best resuts are when *n_estimators* is set around X and *max_depth* is set to X. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we do a confusion matrix on the test set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let us inspect the `feature_importances_` attribute of our random forest."
    ]
   },
   {
